--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
       
     </div>
   
-  </div> 
+  </div>
+
+  <a href="tel:+201003205413"> call </a>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script type="text/javascript">
